tests/errors/array_02_cc.f90
program array_02_cc
implicit none

print *, [[[], [[]]], [[]], []]
print *, [[[], [[]]], []]
print *, "compilation continued despite errors"

end program
